# cmo-agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  docker.yml  integration.yml
docs/: PILOT-DEPLOYMENT.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
helm/omnigtm/: Chart.yaml  values.yaml
infra/: clickhouse-init.sql  init.sql  prometheus-alerts.yml  prometheus.yml
knowledge/battlecards/: build_in_house.md  chargebee.md  maxio.md  zuora.md
knowledge/case_studies/: acme_saas.md  cloudshift_io.md  dataflow_analytics.md  fintech_co.md  medibill_pro.md  paystream_global.md
knowledge/messaging/: industry_messaging.md  objection_handling.md  persona_messaging.md  value_props.md
scripts/: deploy-pilot.sh
src/: logger.py
src/admin/: router.py  ui.html
src/agent/: graph.py  qualification_graph.py  state.py
src/api/: audit.py  auth.py  dashboard.html  dashboard.py  deps.py  embed.py  embed_templates.py  export.py  kb.py  main.py  middleware.py  notifications.py  onboarding.py  onboarding_ui.html  report.py  schemas.py  users.py  webhooks_mgmt.py
src/config/: action_thresholds.py  automation.py  icp.py  settings.py
src/db/: campaign_memory.py  clickhouse.py  queries.py
src/demo/: __init__.py  bootstrap.py  infra.py  llm.py  qualification_data.py  run.py  tools.py  ui.html
src/evaluation/: evaluator.py  metrics.py  test_accounts.py
src/guardrails/: blocklist.py  kill_switch.py  send_caps.py
src/knowledge/: loader.py
src/llm/: budget.py  embeddings.py  prompts.py
tests/: conftest.py
(+111 files in other folders)
